install/soft/package/services/iptables-persistent/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Sun Aug 23 14:53:39 2015
*nat
:PREROUTING ACCEPT [507:33861]
:INPUT ACCEPT [506:32483]
:OUTPUT ACCEPT [161:10120]
:POSTROUTING ACCEPT [161:10120]
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10031 -j DNAT --to-destination 192.168.2.131:22
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10032 -j DNAT --to-destination 192.168.2.132:3389
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10033 -j DNAT --to-destination 192.168.2.3:3389
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10000 -j DNAT --to-destination 192.168.2.200:3389
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10001 -j DNAT --to-destination 192.168.2.201:3389
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10002 -j DNAT --to-destination 192.168.2.202:3389
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10010 -j DNAT --to-destination 192.168.2.210:22
-A PREROUTING -i eth2 -p tcp -m tcp --dport 10011 -j DNAT --to-destination 192.168.2.211:22
-A PREROUTING -s 192.168.2.0/24 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A POSTROUTING -s 192.168.2.0/24 -o eth2 -j MASQUERADE
-A POSTROUTING -s 10.10.10.0/24 -o br0 -j MASQUERADE
COMMIT
# Completed on Sun Aug 23 14:53:39 2015
# Generated by iptables-save v1.4.21 on Sun Aug 23 14:53:39 2015
*mangle
:PREROUTING ACCEPT [3240933009:488675496222]
:INPUT ACCEPT [3014072973:263225945423]
:FORWARD ACCEPT [222958585:225232288165]
:OUTPUT ACCEPT [4680216018:5661089126579]
:POSTROUTING ACCEPT [4903924607:5886372634423]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sun Aug 23 14:53:39 2015
# Generated by iptables-save v1.4.21 on Sun Aug 23 14:53:39 2015
*filter
:INPUT ACCEPT [246:22227]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [283:18580]
:sshguard - [0:0]
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 113 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3389 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth2 -p tcp -m tcp --dport 23 -j DROP
-A INPUT -i eth2 -p tcp -m tcp --dport 3306 -j DROP
-A INPUT -i eth2 -p tcp -m tcp --dport 5432 -j DROP
-A INPUT -i eth2 -p tcp -m tcp --dport 139 -j DROP
-A INPUT -i eth2 -p udp -m udp --dport 137 -j DROP
-A INPUT -i eth2 -p udp -m udp --dport 138 -j DROP
-A INPUT -i eth2 -p tcp -m tcp --dport 445 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.2.0/24 -j ACCEPT
-A FORWARD -i br0 -o eth2 -j ACCEPT
-A FORWARD -i eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -j ACCEPT
-A FORWARD -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 20 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Aug 23 14:53:39 2015
